outputs/integration_errors.txt
test_01_login (__main__.TestIntegracion.test_01_login) ... ok
test_02_propiedades (__main__.TestIntegracion.test_02_propiedades) ... ERROR
test_03_contratos (__main__.TestIntegracion.test_03_contratos) ... ERROR
test_04_liquidaciones (__main__.TestIntegracion.test_04_liquidaciones) ... ERROR
test_05_recaudos (__main__.TestIntegracion.test_05_recaudos) ... ERROR

======================================================================
ERROR: test_02_propiedades (__main__.TestIntegracion.test_02_propiedades)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\test_integration_full.py", line 40, in test_02_propiedades
    props = repo.listar_disponibles()
            ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\src\infraestructura\persistencia\repositorio_propiedad_sqlite.py", line 119, in listar_disponibles
    cursor.execute(
  File "C:\Users\PC\AppData\Roaming\Python\Python312\site-packages\psycopg2\extras.py", line 236, in execute
    return super().execute(query, vars)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
psycopg2.errors.UndefinedFunction: el operador no existe: boolean = integer
LINE 3:             WHERE DISPONIBILIDAD_PROPIEDAD = 1 
                                                   ^
HINT:  Ning·n operador coincide en el nombre y tipos de argumentos. Puede ser necesario agregar conversi¾n explÝcita de tipos.


======================================================================
ERROR: test_03_contratos (__main__.TestIntegracion.test_03_contratos)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\test_integration_full.py", line 54, in test_03_contratos
    arrs = repo_arr.listar_todos()
           ^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'RepositorioContratoArrendamientoSQLite' object has no attribute 'listar_todos'

======================================================================
ERROR: test_04_liquidaciones (__main__.TestIntegracion.test_04_liquidaciones)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\test_integration_full.py", line 63, in test_04_liquidaciones
    repo = RepositorioLiquidacionSQLite(db_manager)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\src\infraestructura\persistencia\repositorio_liquidacion_sqlite.py", line 20, in __init__
    self._crear_tabla_si_no_existe()
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\src\infraestructura\persistencia\repositorio_liquidacion_sqlite.py", line 27, in _crear_tabla_si_no_existe
    cursor.execute("""
psycopg2.errors.SyntaxError: error de sintaxis en o cerca de ½AUTOINCREMENT╗
LINE 3: ...               ID_LIQUIDACION INTEGER PRIMARY KEY AUTOINCREM...
                                                             ^


======================================================================
ERROR: test_05_recaudos (__main__.TestIntegracion.test_05_recaudos)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\test_integration_full.py", line 74, in test_05_recaudos
    repo = RepositorioRecaudoSQLite(db_manager)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\src\infraestructura\persistencia\repositorio_recaudo_sqlite.py", line 20, in __init__
    self._crear_tablas_si_no_existen()
  File "C:\Users\PC\OneDrive\Desktop\inmobiliaria velar\PYTHON-REFLEX\src\infraestructura\persistencia\repositorio_recaudo_sqlite.py", line 28, in _crear_tablas_si_no_existen
    cursor.execute("""
psycopg2.errors.SyntaxError: error de sintaxis en o cerca de ½AUTOINCREMENT╗
LINE 3:                 ID_RECAUDO INTEGER PRIMARY KEY AUTOINCREMENT...
                                                       ^


----------------------------------------------------------------------
Ran 5 tests in 0.064s

FAILED (errors=4)


============================================================
INICIANDO PRUEBAS DE INTEGRACIËN - DB MODE: POSTGRESQL
============================================================

[TEST] Autenticaci¾n...
  OK.

[TEST] Propiedades...

[TEST] Contratos...

[TEST] Liquidaciones...

[TEST] Recaudos...
